# GC-Adapter-ESP32-S3

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
3d/: Bottom.step  Button.step  LightPipe.step  Top.step
3d/arrayed parts/: array buttons.stl  array lightpipes.stl
FW/: CMakeLists.txt  esp32manifest.json  manifest.cmake  manifest.json  sdkconfig  sdkconfig.old
FW/include/: adapter_config.h  adapter_memory.h  adapter_types.h  gc.h  main.h  rgb_animator.h  rmt_gc.h
FW/include/devices/: gamecube.h
FW/include/switch/: switch_commands.h
FW/include/utilities/: util_common.h  util_usb.h
FW/main/: CMakeLists.txt  idf_component.yml  joybus_itf.c  main.c  manifest.py  rgb_itf.c
FW/src/: CMakeLists.txt  adapter_memory.c  gc_timer.c
FW/src/devices/: gamecube.c  webusb.c
FW/src/switch/: switch_analog.c  switch_commands.c
include/: adapter_includes.h  adapter_memory.h  gc.h
include/devices/: swpro.h  webusb.h  xinput.h
include/drivers/: xinput_device.h
include/switch/: switch_analog.h  switch_commands.h  switch_spi.h
include/usb/: desc_bos.h
include/utilities/: util_common.h  util_usb.h
main/: CMakeLists.txt  adapter_includes.h  adapter_memory.c  adapter_memory.h  adapter_types.h  command_handler.c  command_handler.h  descriptors.c  descriptors.h  gc.c  gc.h  gc_mode_descriptor.c  gc_timer.h  generic_mode_descriptor.c  idf_component.yml  main.c  ns_mode_descriptor.c  rgb_animator.c  rgb_animator.h  rmt_gc.h  util_rgb.c  util_rgb.h  util_usb.c  util_usb.h  xinput_device.c  xinput_device.h
main/devices/: swpro.c  xinput.c
main/notes/: xinput hid notes.txt
main/switch/: switch_commands.c  switch_spi.c
main/usb/: desc_bos.c
main/utilities/: util_usb.c
